--- a/style.css
+++ b/style.css
@@ -510,6 +510,10 @@ nav {
     z-index: 100;
 }
 
+.modal--open .shape {
+    display: none;
+}
+
 
 /* 
 
@@ -562,6 +566,7 @@ nav {
 .project__wrapper:hover .project__wrapper-bg {
     opacity: 0.7;
     background-color: #1c1d25;
+    transition: all 600ms ease;
 }
 
 .project__wrapper-bg {
@@ -570,7 +575,6 @@ nav {
     left: 0;
     width: 100%;
     height: 100%;
-    /* background-color: #1c1d25; */
     opacity: 0.7;
 }
 
@@ -604,7 +608,6 @@ footer {
     background-color: #242424;
     display: flex;
     padding: 6% 0;
-    /* z-index: 99; */
 }
 
 .footer__row {
