--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ header {
     font-size: 24px;
     border-radius: 50%;
     border: none;
-    background-color: #242424;
+    background-color: #242424f9;
     color: white;
     position: fixed;
     bottom: 32px;
@@ -625,12 +625,31 @@ footer {
     max-width: 500px;
     display: flex;
     justify-content: space-around;
-    margin: 28px 0;
+    margin: 40px 0;
 }
 
 .footer__social--link,
 .footer__copyright {
     color: white;
+}
+
+.footer__logo--popper {
+  position: absolute;
+  right: 0;
+  top: 24px;
+  font-weight: 700;
+  opacity: 0;
+  transition: all 300ms ease;
+  color: white;
+}
+
+.footer__anchor {
+  position: relative;
+}
+
+.footer__anchor:hover .footer__logo--popper {
+  transform: translateX(80px);
+  opacity: 1;
 }
 
 /* 
